2003-08-26  Nick Clifton  <nickc@redhat.com>

	* po/de.po: New German translation.
	* configure.in (ALL_LINGUAS): Add de.
	* configure: Regenerate.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* gconfig.in: Regenerate.

2003-08-21  Nick Clifton  <nickc@redhat.com>

	* po/tr.po: Updated Turkish translation.

2003-08-14  Alan Modra  <amodra@bigpond.net.au>

	* dep-in.sed: Remove libintl.h.
	* Makefile.am (POTFILES.in): Unset LC_COLLATE.
	* Makefile.in: Regenerate.

2003-07-24  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2003-07-20  H.J. Lu <hongjiu.lu@intel.com>

	* po/Make-in (.po.gmo): Do check if the .gmo file is writable
	before generating it.

2003-07-17  Nick Clifton  <nickc@redhat.com>

	* po/es.po: New Spanish translation.

2003-07-11  Alan Modra  <amodra@bigpond.net.au>

	* po/gprof.pot: Regenerate.

2003-06-11  H.J. Lu <hongjiu.lu@intel.com>

	* po/Make-in (DESTDIR): New.
	(install-data-yes): Support $(DESTDIR).
	(uninstall): Likewise.

2003-03-27  Chris Demetriou  <cgd@broadcom.com>

	* gmon_io.c (enum gmon_ptr_size, enum gmon_ptr_signedness): New.
	(gmon_get_ptr_size, gmon_get_ptr_signedness): New.
	(gmon_io_read_vma, gmon_io_write_vma, gmon_read_raw_arc)
	(gmon_write_raw_arc, gmon_out_read, gmon_out_write): Adjust to
	use new functions and enums.

2003-02-21  K Schutte  <schutte@fel.tno.nl>

	* corefile.c (core_create_line_syms): Check for a NULL sentinel
	value before using it.

2002-12-02  Nick Clifton  <nickc@redhat.com>

	* configure.in (LINGUAS): Add pt_BR.
	* configure: Regenerate.
	* po/pt_BR: New Brazillian Portugese translation.

2002-11-30  Alan Modra  <amodra@bigpond.net.au>

	* basic_blocks.c, basic_blocks.h, cg_arcs.c, cg_dfn.c, cg_print.c,
	corefile.c, gmon_io.c, gprof.c, gprof.h, hist.c, mips.c, source.c,
	source.h, sym_ids.c, sym_ids.h, symtab.h, tahoe.c, vax.c: Replace
	boolean with bfd_boolean, true with TRUE, false with FALSE.
	Formatting.

2002-11-12  Nick Clifton  <nickc@redhat.com>
